Viewer : add margin to menu button

--- a/viewer.html
+++ b/viewer.html
@@ -152,7 +152,7 @@
 				} else {
 					$scroller.css({
 						position: "absolute",
-						top: "", left : "1em"
+						top: "1em", left : "1em"
 					});
 				}
 			};
