Viewer : set default cursor to menu overlay

--- a/viewer.html
+++ b/viewer.html
@@ -203,7 +203,11 @@
 				message : jQuery('div#menu'),
 				fadeIn  : 0,
 				fadeOut : 0,
+				css : {
+					cursor : 'default',
+				},
 				overlayCSS : {
+					cursor : 'default',
 					backgroundColor : '#000',
 					opacity : 0.85
 				}
