Viewer : change Coco test theme name

--- a/viewer.html
+++ b/viewer.html
@@ -127,7 +127,7 @@
 				new Theme.Reference('stoneage','Stone Age'),
 				new Theme.Reference('subtle','Subtle'),
 				new Theme.Reference('terminal','Terminal'),
-				new Theme.Reference('fuckit','Coco')
+				new Theme.Reference('CocoIsGone','Coco')
 			],
 			extra : {
 				location : 'theme/generali/{0}',
