viewer : style for menu

--- a/viewer.html
+++ b/viewer.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/martin-work/web-util/master/static/css/common.css" />
 	<script type="text/javascript" src="https://cdn.rawgit.com/martin-work/web-util/master/static/js/misc.js"></script>
 	<link rel="stylesheet" href="css/viewer.css" />
+	<link rel="stylesheet" href="css/viewer-main.css" />
 	<link rel="stylesheet" href="https://cdn.rawgit.com/martin-work/web-util/master/static/css/stackedit/export.css" />
 	<script type="text/javascript" src="js/js.cookie.js"></script>
 	<script type="text/javascript" src="js/mdu.js"></script>
@@ -356,7 +357,7 @@
 	</div>
 
 	<div id="menu" style="display:none">
-		<table style="td:nth-child(1):{text-align: start}">
+		<table class="option">
 			<tr>
 				<td>Theme</a>
 				<td>
