--- a/viewer.html
+++ b/viewer.html
@@ -264,7 +264,7 @@
 			}).css('cursor','pointer');
 			
 			//var stash_prefix = 'http://git.groupe.generali.fr';
-			var stash_prefix = 'http://gf215739/git-stash';
+			var stash_prefix = '/git-stash';
 			
 			markdownBuilder = new MarkdownDisplay.Builder({
 				content : {
@@ -367,15 +367,22 @@
 		<h2>Options</h2>
 		<table class="option">
 			<tr>
-				<td>Theme</a>
+				<td>Theme</td>
 				<td>
 					<select id="theme" />
 				</td>
 			</tr>
 			<tr>
-				<td>Date</a>
+				<td>Meta Theme</td>
 				<td>
-					<input type="checkbox" value="Use default" >Custom format </input><input type="text" />
+					<input id="meta-theme-enable" type="checkbox"/><label for="meta-theme-enable">Enable</label>
+				</td>
+			</tr>
+
+			<tr>
+				<td>Date</td>
+				<td>
+					<input id="date-format-enable" type="checkbox"/><label for="date-format-enable">Custom format </label><input type="text" placeholder="dd-MM-yyyy hh mm"/>
 				</td>
 			</tr>
 
@@ -396,7 +403,7 @@
 	</div>
 
 
-	<div id="exported-content" class="viewer body" style="text-align: center">
+	<div id="exported-content" class="viewer body" style="display : none; text-align: center">
 		<div style="display: inline-block; text-align: initial;">
 			<table>
 				<tr>
@@ -417,5 +424,84 @@
 			</table>
 		</div>
 	</div>
+	
+	<style>
+		.prometa {
+			background-image: url('image/hero-edge_1399x600.jpg');
+			background-position: top;
+			background-repeat: no-repeat;
+			margin: 0;
+			padding: 0;
+			width: 1399px;
+			height: 600px;
+			overflow: hidden;
+			position: absolute;
+		}
+
+		.prometa>header {
+			background : none;
+			position: absolute;
+			top: 10px;
+			left: 20px;
+		}
+		.prometa .screen-twist {
+			position: absolute;
+			background : white;
+			top: 0;
+			left: -105px;
+			width: 728px;
+			height: 484px;
+			transform-origin: 0 0 0;
+			transform: matrix3d(.25514, -.02251, 0, -.00027, -.26292, .75801, 0, -.00004, 0, 0, 1, 0, 1049, 67, 0, 1)
+		}
+		.prometa .screen-scroll {
+			height: 484px;
+			overflow-x: hidden; 
+			overflow-y: scroll;
+		}
+
+.glossy .image-wrap {
+	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.5);
+	-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,.5);
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,.5);
+
+	/*-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;*/
+}
+
+.glossy .image-wrap:after {
+	position: absolute;
+	content: ' ';
+	width: 100%;
+	height: 50%;
+	top: 0;
+	left: 0;
+	pointer-events:none;
+
+	/*-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;*/
+
+	background: -moz-linear-gradient(top, rgba(255,255,255,0.7) 0%, rgba(255,255,255,.1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.7)), color-stop(100%,rgba(255,255,255,.1)));
+	background: linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,.1) 100%);
+}	
+	</style>
+
+	<div class="viewer-body">
+		<div class="prometa glossy">
+			<div class="screen-twist image-wrap"> 
+			<div class="screen-scroll">
+			<div class="" style="background:white;">
+				<div class="container"><div class="content"></div></div>
+			</div>
+			</div>
+			</div>
+			<header style="text-align: center; padding-left: 70px"/>
+
+		</div>
+	</div>
+	
 </body>
 </html>
