viewer : import hightlight js from 'local' site

--- a/viewer.html
+++ b/viewer.html
@@ -47,8 +47,8 @@
 
 	<script src="js/jspdf.min.js"></script>
 	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+	<link rel="stylesheet" href="css/highlight.default.min.css">
+	<script src="js/highlight.min.js"></script>
 
 	<script type="text/javascript" src="config.js"></script>
 
