force width 100% for the main div

--- a/viewer.html
+++ b/viewer.html
@@ -455,7 +455,7 @@
 
 	<script id="viewer-normal-template" type="text/x-handlebars-template">
 		<div id="exported-content" class="theme" style="text-align: center">
-			<div class="body" style="display: inline-block; text-align: initial;">
+			<div class="body" style="width: 100%; display: inline-block; text-align: initial;">
 				<table>
 					<tr>
 						<td>
